--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "start": "remix-serve build"
   },
   "dependencies": {
-    "@remix-run/react": "^1.1.0",
-    "@remix-run/serve": "^1.1.0",
+    "@remix-run/react": "^1.1.1",
+    "@remix-run/serve": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "^1.1.0"
+    "remix": "^1.1.1",
+    "suchjs": "^2.1.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.1.0",
@@ -24,7 +25,6 @@
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "concurrently": "^6.5.0",
-    "suchjs": "^2.1.1",
     "tailwindcss": "^3.0.7",
     "typescript": "^4.1.2"
   },
